--- a/07_Shop_MultiProduct/Views/Shared/_partial/_MainHeader_1.cshtml
+++ b/07_Shop_MultiProduct/Views/Shared/_partial/_MainHeader_1.cshtml
@@ -84,8 +84,8 @@
                                                                         <img src="@item.Images" alt="@item.PrName">
                                                                     </a>
                                                                 </div>
-                                                                <h4 class="heading">Giảm giá 20%</h4>
-                                                                <p>@item.ShortDesc.Substring(0, 61)</p>
+                                                                <h4 class="heading">@Convert.ToInt32( ((item.SalePrice-item.Price))/item.Price*100) %</h4>
+                                                                <p>@Anpero.StringHelpper.SubString(61,item.ShortDesc)</p>
                                                             </div>
                                                         }
                                                     }
