--- a/07_Shop_MultiProduct/Views/Shared/_partial/_MainHeader_1.cshtml
+++ b/07_Shop_MultiProduct/Views/Shared/_partial/_MainHeader_1.cshtml
@@ -53,7 +53,7 @@
                                                                         <ul class="level1">
                                                                             @foreach (var chidItem in item.ChildCategory)
                                                                             {
-                                                                                <li class="level2 nav-6-1-1"><a href="@Anpero.StringHelpper.GetCategoryLink(chidItem.Name, chidItem.Id)"><span>@chidItem.Name</span></a></li>
+                                                                                <li class="level2"><a href="@Anpero.StringHelpper.GetCategoryLink(chidItem.Name, chidItem.Id)"><span>@chidItem.Name</span></a></li>
                                                                             }
                                                                         </ul>
                                                                     </li>
