--- a/07_Shop_MultiProduct/Views/Shared/_Layout.cshtml
+++ b/07_Shop_MultiProduct/Views/Shared/_Layout.cshtml
@@ -29,19 +29,7 @@
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,600italic,700italic,400,600,700,800' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,700' rel='stylesheet' type='text/css'>
-    @RenderSection("canonical", required: false)
-    <script>
-        (function (i, s, o, g, r, a, m) {
-            i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
-                (i[r].q = i[r].q || []).push(arguments)
-            }, i[r].l = 1 * new Date(); a = s.createElement(o),
-            m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
-        })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
-
-        ga('create', 'UA-104932218-1', 'auto');
-        ga('send', 'pageview');
-
-    </script>
+    @RenderSection("canonical", required: false)    
 </head>
 <body>
     <h1 id="heading1" style="display:none;">
@@ -65,6 +53,7 @@
     <script type="text/javascript" src="/assets/js/jquery.bxslider.min.js"></script>
     <script type="text/javascript" src="/assets/js/owl.carousel.min.js"></script>
     <script type="text/javascript" src="/assets/js/jquery.mobile-menu.min.js"></script>
+    <script src="/assets/plugins/jquery.lazyload.min.js"></script>
     @RenderSection("scripts", required: false)
     <script type="text/javascript">
         jQuery(document).ready(function () {
