--- a/07_Shop_MultiProduct/Views/Shared/article/_MenuAndAdsPartial.cshtml
+++ b/07_Shop_MultiProduct/Views/Shared/article/_MenuAndAdsPartial.cshtml
@@ -19,7 +19,7 @@
                 <ul class="posts-list unstyled clearfix">
                     @if (TopArticle != null && TopArticle.ItemList.Length > 0)
                     {
-                        for (int i = 0; i < TopArticle.ItemList.Length - 1; i++)
+                        for (int i = 0; i < TopArticle.ItemList.Length; i++)
                         {
                             <li>
                                 <figure class="featured-thumb"><a href="@Anpero.StringHelpper.GetArticleLink(TopArticle.ItemList[i].Title,TopArticle.ItemList[i].Id)"><img src="@TopArticle.ItemList[i].Thumb" alt="@TopArticle.ItemList[i].Title"></a></figure>
@@ -33,9 +33,7 @@
                                 </div>
                             </li>
                         }
-
                     }
-
                 </ul>
             </div>
         </div>
@@ -52,57 +50,6 @@
                     }
                 }
             </div>
-        </div>
-        @if (ViewData["slide3"] != null)
-        {
-            Ads[] slide = (Ads[])ViewData["slide3"];
-            if (slide.Length > 0)
-            {
-                <div class="custom-slider">
-                    <div>
-                        <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-                            <ol class="carousel-indicators">
-                                @for (int i = 0; i < slide.Length; i++)
-                                {
-                                    if (i == 0)
-                                    {
-                                        <li class="active" data-target="#carousel-example-generic" data-slide-to="0"></li>
-                                    }
-                                    else if (i < 3)
-                                    {
-                                        <li data-target="#carousel-example-generic" data-slide-to="@i" class=""></li>
-                                    }
-                                }
-                            </ol>
-                            <div class="carousel-inner">
-                                @for (int i = 0; i < slide.Length; i++)
-                                {
-
-                                    if (i == 0)
-                                    {
-                                        <div class="item active">
-                                            <img src="@slide[i].ImagesUrl" alt="@slide[i].Description" />
-                                            <div class="carousel-caption">
-                                                @Html.Raw(slide[i].Description)
-                                            </div>
-                                        </div>
-                                    }
-                                    else if (i < 3)
-                                    {
-                                        <div class="item">
-                                            <img src="@slide[i].ImagesUrl" alt="@slide[i].Description" />
-                                            <div class="carousel-caption">
-                                                @Html.Raw(slide[i].Description)
-                                            </div>
-                                        </div>
-                                    }
-                                }
-                            </div>
-                            <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev"> <span class="sr-only">Previous</span> </a> <a class="right carousel-control" href="#carousel-example-generic" data-slide="next"> <span class="sr-only">Next</span> </a>
-                        </div>
-                    </div>
-                </div>
-            }
-        }
+        </div>        
     </div>
 </div>
