--- a/07_Shop_MultiProduct/assets/stylesheet/HoverEffects-style_common.css
+++ b/07_Shop_MultiProduct/assets/stylesheet/HoverEffects-style_common.css
@@ -1,6 +1,6 @@
 .view {
-   width: 300px;
-   height: 200px;
+   width: 100%;
+   height: 100%;
    margin: 10px;
    float: left;
    border: 10px solid #fff;
@@ -11,11 +11,11 @@
    -moz-box-shadow: 1px 1px 2px #e6e6e6;
    box-shadow: 1px 1px 2px #e6e6e6;
    cursor: default;
-   background: #fff url(../images/bgimg.jpg) no-repeat center center;
+   background: #fff url(/assets/images/bgimg.jpg) no-repeat center center;
 }
 .view .mask,.view .content {
-   width: 300px;
-   height: 200px;
+   width: 100%;
+   height: 100%;
    position: absolute;
    overflow: hidden;
    top: 0;
