--- a/07_Shop_MultiProduct/Views/Shared/_partial/_MainFooter_1.cshtml
+++ b/07_Shop_MultiProduct/Views/Shared/_partial/_MainFooter_1.cshtml
@@ -116,7 +116,7 @@
         <div class="footer-bottom">
             <div class="container">
                 <div class="row">
-                    <div class="col-sm-12 col-xs-12 coppyright">© 2016 Ngonlanh. All Rights Reserved. Power by Anpero</div>
+                    <div class="col-sm-12 col-xs-12 coppyright">© 2016 Kientrucbonmua. All Rights Reserved. Power by Anpero</div>
 
                 </div>
                 <!--row-->
