--- a/05_Shop_MultiProduct/Views/Home/Index.cshtml
+++ b/05_Shop_MultiProduct/Views/Home/Index.cshtml
@@ -65,13 +65,19 @@
                         <div class="slider-items slider-width-col4 products-grid">
                             @if (commonInfo.ProductCategoryList != null && commonInfo.ProductCategoryList.Length > 0)
                             {
-                                foreach (var item in commonInfo.ProductCategoryList.Where(p => p.Id == 73))
+                                foreach (var item in commonInfo.ProductCategoryList)
                                 {
                                     if (item.ChildCategory != null && item.ChildCategory.Length > 0)
                                     {
                                         foreach (var childItem in item.ChildCategory)
                                         {
-                                            <div class="item">
+                                            AnperoFrontend.WebService.AnperoService sv = new AnperoFrontend.WebService.AnperoService();
+                                            int StoreID = Convert.ToInt32(System.Configuration.ConfigurationManager.AppSettings["storeID"]);
+                                            string TokenKey = System.Configuration.ConfigurationManager.AppSettings["storeTokenKey"];
+                                            AnperoFrontend.WebService.SearchResult rs   = sv.SearchProduct(StoreID, TokenKey, childItem.Id.ToString(), "", "", 0, 999999, 1, 14, "", "TimeDesc", 0);
+                                            if(rs != null && rs.Item.Length > 0)
+                                            {
+                                                <div class="item">
                                                 <div class="pro-img">
                                                     <a href="@Anpero.StringHelpper.GetCategoryLink(childItem.Name, childItem.Id)">
                                                         <img src="@childItem.Images" alt="@childItem.Name">
@@ -79,6 +85,7 @@
                                                     </a>
                                                 </div>
                                             </div>
+                                            }
                                         }
                                     }
                                 }
@@ -93,9 +100,9 @@
     <section class="wow bounceInUp animated">
         <div class="best-pro slider-items-products container">
             <div class="new_title">
-                <h2>Sản phẩm bán chạy</h2>
+                <h2>Sản phẩm khuyến mại</h2>
             </div>
-            <div class="cate-banner-img">
+            @*<div class="cate-banner-img">
                 @if (ViewData["AdsSlide2"] != null)
                 {
                     Ads[] slide = (Ads[])ViewData["AdsSlide2"];
@@ -104,6 +111,74 @@
                         <img src="@slide[0].ImagesUrl" alt="@slide[0].Description" />
                     }
                 }
+            </div>*@
+            <div id="best-seller" class="product-flexslider hidden-buttons">
+                <div class="slider-items slider-width-col4 products-grid">
+                    @if (ViewData["saleProduct"] != null)
+                    {
+                        AnperoFrontend.WebService.ProductItem[] saleList = (AnperoFrontend.WebService.ProductItem[])ViewData["saleProduct"];
+                        if (saleList != null && saleList.Length > 0)
+                        {
+                            for (int i = 0; i < saleList.Length; i++)
+                            {
+                                <div class="item">
+                                    <div class="item-inner">
+                                        <div class="item-img">
+                                            <div class="item-img-info">
+                                                <a href="@Anpero.StringHelpper.GetProductLink(saleList[i].PrName, saleList[i].Id)" title="@saleList[i].PrName" class="product-image">
+                                                    <img src="@saleList[i].Images" alt="@saleList[i].PrName">
+                                                </a>
+                                                <div class="sale-label sale-top-left">Sale</div>
+                                                @*<div class="new-label new-top-left">New</div>*@
+                                                <div class="item-box-hover">
+                                                    <div class="box-inner">
+                                                        <div class="product-detail-bnt">
+                                                            <a class="button detail-bnt" href="@Anpero.StringHelpper.GetProductLink(saleList[i].PrName, saleList[i].Id)" title="@saleList[i].PrName">
+                                                                <span>Chi tiết</span>
+                                                            </a>
+                                                        </div>                                                       
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="item-info">
+                                            <div class="info-inner">
+                                                <div class="item-title">
+                                                    <a href="@Anpero.StringHelpper.GetProductLink(saleList[i].PrName, saleList[i].Id)" title="@saleList[i].PrName">
+                                                        @saleList[i].PrName
+                                                    </a> 
+                                                </div>
+                                                <div class="item-content">
+                                                    <div class="rating">
+                                                        <div class="ratings">
+                                                            <div class="rating-box">
+                                                                <div class="rating" style="width:80%"></div>
+                                                            </div>
+                                                            <p class="rating-links"><a href="#">1 Review(s)</a> <span class="separator">|</span> <a href="#">Add Review</a> </p>
+                                                        </div>
+                                                    </div>
+                                                    <div class="item-price">
+                                                        <div class="price-box"><span class="regular-price"><span class="price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(saleList[i].Price) đ</span> </span> </div>
+                                                    </div>
+                                                    <div class="add_cart">                                                        
+                                                        <button class="button btn-cart" type="button" onclick="Cart.addProduct(@saleList[i].Id,@saleList[i].Price,'@saleList[i].Images','@saleList[i].PrName');"><span>Mua ngay</span></button>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            }
+                        }
+                    }
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="wow bounceInUp animated">
+        <div class="best-pro slider-items-products container">
+            <div class="new_title">
+                <h2>Sản phẩm bán chạy</h2>
             </div>
             <div id="best-seller" class="product-flexslider hidden-buttons">
                 <div class="slider-items slider-width-col4 products-grid">
@@ -128,7 +203,7 @@
                                                             <a class="button detail-bnt" href="@Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)" title="@item.PrName">
                                                                 <span>Chi tiết</span>
                                                             </a>
-                                                        </div>                                                       
+                                                        </div>
                                                     </div>
                                                 </div>
                                             </div>
@@ -138,7 +213,7 @@
                                                 <div class="item-title">
                                                     <a href="@Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)" title="@item.PrName">
                                                         @item.PrName
-                                                    </a> 
+                                                    </a>
                                                 </div>
                                                 <div class="item-content">
                                                     <div class="rating">
@@ -152,7 +227,7 @@
                                                     <div class="item-price">
                                                         <div class="price-box"><span class="regular-price"><span class="price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price) đ</span> </span> </div>
                                                     </div>
-                                                    <div class="add_cart">                                                        
+                                                    <div class="add_cart">
                                                         <button class="button btn-cart" type="button" onclick="Cart.addProduct(@item.Id,@item.Price,'@item.Images','@item.PrName');"><span>Mua ngay</span></button>
                                                     </div>
                                                 </div>
