--- a/05_Shop_MultiProduct/Views/Product/List.cshtml
+++ b/05_Shop_MultiProduct/Views/Product/List.cshtml
@@ -103,52 +103,103 @@
                                         <ol class="products-list" id="products-list">
                                             @foreach (AnperoFrontend.WebService.ProductItem item in productList.Item)
                                             {
-                                                <li class="item first">
-                                                    <div class="product-image">
-                                                        <a href="@Anpero.StringHelpper.GetProductLink(item.PrName, item.Id)" title="@item.PrName">
-                                                            <img class="small-image" src="@item.Images" alt="@item.PrName">
-                                                        </a>
-                                                    </div>
-                                                    <div class="product-shop">
-                                                        <h2 class="product-name">
-                                                            <a href="@Anpero.StringHelpper.GetProductLink(item.PrName, item.Id)" title="@item.PrName">@item.PrName</a>
-                                                        </h2>
-                                                        <div class="ratings">
-                                                            <div class="rating-box">
-                                                                <div style="width:50%" class="rating"></div>
+                                                if (productList.Item.First() == item)
+                                                { 
+                                                    <li class="item first">
+                                                        <div class="product-image">
+                                                            <a href="@Anpero.StringHelpper.GetProductLink(item.PrName, item.Id)" title="@item.PrName">
+                                                                <img class="small-image" src="@item.Images" alt="@item.PrName">
+                                                            </a>
+                                                        </div>
+                                                        <div class="product-shop">
+                                                            <h2 class="product-name">
+                                                                <a href="@Anpero.StringHelpper.GetProductLink(item.PrName, item.Id)" title="@item.PrName">@item.PrName</a>
+                                                            </h2>
+                                                            <div class="ratings">
+                                                                <div class="rating-box">
+                                                                    <div style="width:50%" class="rating"></div>
+                                                                </div>
+                                                                <p class="rating-links"> <a href="#/review/product/list/id/167/category/35/">1 Nhận xét</a> <span class="separator">|</span> <a href="#review-form">Thêm nhận xét</a> </p>
                                                             </div>
-                                                            <p class="rating-links"> <a href="#/review/product/list/id/167/category/35/">1 Nhận xét</a> <span class="separator">|</span> <a href="#review-form">Thêm nhận xét</a> </p>
-                                                        </div>
-                                                        <div class="desc std">
-                                                            <p>
-                                                                @item.ShortDesc
-                                                            </p>
-                                                            <p>
-                                                                <a class="link-learn" title="" href="@Anpero.StringHelpper.GetProductLink(item.PrName, item.Id)">Chi tiết</a>
-                                                            </p>
-                                                        </div>
-                                                        <div class="price-box">
-                                                            @if (item.IsSale)
-                                                            {
-                                                                <p class="old-price"><span class="price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price) đ</span> </p>
-                                                                <p class="special-price"><span class="price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.SalePrice) đ</span> </p>
-                                                            }
-                                                            else
-                                                            {
-                                                                <p><span class="price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price) đ</span> </p>
+                                                            <div class="desc std">
+                                                                <p>
+                                                                    @item.ShortDesc
+                                                                </p>
+                                                                <p>
+                                                                    <a class="link-learn" title="" href="@Anpero.StringHelpper.GetProductLink(item.PrName, item.Id)">Chi tiết</a>
+                                                                </p>
+                                                            </div>
+                                                            <div class="price-box">
+                                                                @if (item.IsSale)
+                                                                {
+                                                                    <p class="old-price"><span class="price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price) đ</span> </p>
+                                                                    <p class="special-price"><span class="price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.SalePrice) đ</span> </p>
+                                                                }
+                                                                else
+                                                                {
+                                                                    <p><span class="price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price) đ</span> </p>
 
-                                                            }
+                                                                }
 
-                                                        </div>
-                                                        <div class="actions">
-                                                            <button class="button btn-cart ajx-cart" title="Mua ngay" type="button" onclick="Cart.addProduct(@item.Id,@item.Price,'@item.Images','@item.PrName');"><span>Mua ngay</span></button>
-                                                            <span class="add-to-links">
-                                                                <button class="button btn-cart ajx-cart" title="Mua ngay" type="button" onclick="Cart.addProduct3(@item.Id,@item.Price,'@item.Images','@item.PrName');"><span>Thêm vào giỏ hàng</span></button>
+                                                            </div>
+                                                            <div class="actions">
+                                                                <button class="button btn-cart ajx-cart" title="Mua ngay" type="button" onclick="Cart.addProduct(@item.Id,@item.Price,'@item.Images','@item.PrName');"><span>Mua ngay</span></button>
+                                                                <span class="add-to-links">
+                                                                    <button class="button btn-cart ajx-cart" title="Mua ngay" type="button" onclick="Cart.addProduct3(@item.Id,@item.Price,'@item.Images','@item.PrName');"><span>Thêm vào giỏ hàng</span></button>
 
-                                                            </span>
+                                                                </span>
+                                                            </div>
                                                         </div>
-                                                    </div>
-                                                </li>
+                                                    </li>
+                                                }
+                                                else
+                                                {
+                                                    <li class="item even">
+                                                        <div class="product-image">
+                                                            <a href="@Anpero.StringHelpper.GetProductLink(item.PrName, item.Id)" title="@item.PrName">
+                                                                <img class="small-image" src="@item.Images" alt="@item.PrName">
+                                                            </a>
+                                                        </div>
+                                                        <div class="product-shop">
+                                                            <h2 class="product-name">
+                                                                <a href="@Anpero.StringHelpper.GetProductLink(item.PrName, item.Id)" title="@item.PrName">@item.PrName</a>
+                                                            </h2>
+                                                            <div class="ratings">
+                                                                <div class="rating-box">
+                                                                    <div style="width:50%" class="rating"></div>
+                                                                </div>
+                                                                <p class="rating-links"> <a href="#/review/product/list/id/167/category/35/">1 Nhận xét</a> <span class="separator">|</span> <a href="#review-form">Thêm nhận xét</a> </p>
+                                                            </div>
+                                                            <div class="desc std">
+                                                                <p>
+                                                                    @item.ShortDesc
+                                                                </p>
+                                                                <p>
+                                                                    <a class="link-learn" title="" href="@Anpero.StringHelpper.GetProductLink(item.PrName, item.Id)">Chi tiết</a>
+                                                                </p>
+                                                            </div>
+                                                            <div class="price-box">
+                                                                @if (item.IsSale)
+                                                                {
+                                                                    <p class="old-price"><span class="price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price) đ</span> </p>
+                                                                    <p class="special-price"><span class="price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.SalePrice) đ</span> </p>
+                                                                }
+                                                                else
+                                                                {
+                                                                    <p><span class="price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price) đ</span> </p>
+
+                                                                }
+                                                            </div>
+                                                            <div class="actions">
+                                                                <button class="button btn-cart ajx-cart" title="Mua ngay" type="button" onclick="Cart.addProduct(@item.Id,@item.Price,'@item.Images','@item.PrName');"><span>Mua ngay</span></button>
+                                                                <span class="add-to-links">
+                                                                    <button class="button btn-cart ajx-cart" title="Mua ngay" type="button" onclick="Cart.addProduct3(@item.Id,@item.Price,'@item.Images','@item.PrName');"><span>Thêm vào giỏ hàng</span></button>
+
+                                                                </span>
+                                                            </div>
+                                                        </div>
+                                                    </li>
+                                                }
                                             }
                                         </ol>
                                     </div>
