--- a/05_Shop_MultiProduct/Views/Home/Index.cshtml
+++ b/05_Shop_MultiProduct/Views/Home/Index.cshtml
@@ -158,7 +158,20 @@
                                                         </div>
                                                     </div>
                                                     <div class="item-price">
-                                                        <div class="price-box"><span class="regular-price"><span class="price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(saleList[i].Price) đ</span> </span> </div>
+                                                        <div class="price-box">
+                                                            <span class="regular-price">
+                                                                @*<span class="price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(saleList[i].Price) đ</span>*@ 
+                                                                @if (saleList[i].IsSale)
+                                                                {
+                                                                    <p class="old-price"><span class="price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(saleList[i].Price) đ</span> </p>
+                                                                    <p class="special-price"><span class="price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(saleList[i].SalePrice) đ</span> </p>
+                                                                }
+                                                                else
+                                                                {
+                                                                    <p><span class="price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(saleList[i].Price) đ</span> </p>
+                                                                }
+                                                            </span> 
+                                                        </div>
                                                     </div>
                                                     <div class="add_cart">                                                        
                                                         <button class="button btn-cart" type="button" onclick="Cart.addProduct(@saleList[i].Id,@saleList[i].Price,'@saleList[i].Images','@saleList[i].PrName');"><span>Mua ngay</span></button>
@@ -180,8 +193,9 @@
             <div class="new_title">
                 <h2>Sản phẩm bán chạy</h2>
             </div>
-            <div id="best-seller" class="product-flexslider hidden-buttons">
-                <div class="slider-items slider-width-col4 products-grid">
+            <!--Xoa row-->
+            <div class="category-products">
+                <ul class="products-grid">
                     @if (ViewData["BestsaleProduct"] != null)
                     {
                         AnperoFrontend.WebService.SearchResult bestSaleList = (AnperoFrontend.WebService.SearchResult)ViewData["BestsaleProduct"];
@@ -189,18 +203,25 @@
                         {
                             foreach (ProductItem item in bestSaleList.Item)
                             {
-                                <div class="item">
+                                <li class="item col-lg-4 col-md-3 col-sm-4 col-xs-6">
                                     <div class="item-inner">
                                         <div class="item-img">
                                             <div class="item-img-info">
                                                 <a href="@Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)" title="@item.PrName" class="product-image">
                                                     <img src="@item.Images" alt="@item.PrName">
                                                 </a>
-                                                <div class="new-label new-top-left">New</div>
+                                                @if (item.IsSale)
+                                                {
+                                                    <div class="sale-label sale-top-right">Sale</div>
+                                                }
+                                                else
+                                                {
+                                                    <div class="new-label new-top-left">New</div>
+                                                }
                                                 <div class="item-box-hover">
                                                     <div class="box-inner">
                                                         <div class="product-detail-bnt">
-                                                            <a class="button detail-bnt" href="@Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)" title="@item.PrName">
+                                                            <a href="@Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)" title="@item.PrName" class="button detail-bnt" type="button">
                                                                 <span>Chi tiết</span>
                                                             </a>
                                                         </div>
@@ -211,9 +232,7 @@
                                         <div class="item-info">
                                             <div class="info-inner">
                                                 <div class="item-title">
-                                                    <a href="@Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)" title="@item.PrName">
-                                                        @item.PrName
-                                                    </a>
+                                                    <a href="@Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)" title="@item.PrName">@item.PrName</a> 
                                                 </div>
                                                 <div class="item-content">
                                                     <div class="rating">
@@ -225,7 +244,19 @@
                                                         </div>
                                                     </div>
                                                     <div class="item-price">
-                                                        <div class="price-box"><span class="regular-price"><span class="price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price) đ</span> </span> </div>
+                                                        <div class="price-box">
+                                                            <span class="regular-price" id="product-price-1">
+                                                                @if (item.IsSale)
+                                                                {
+                                                                    <p class="old-price"><span class="price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price) đ</span> </p>
+                                                                    <p class="special-price"><span class="price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.SalePrice) đ</span> </p>
+                                                                }
+                                                                else
+                                                                {
+                                                                    <p><span class="price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price) đ</span> </p>
+                                                                }
+                                                            </span> 
+                                                        </div>
                                                     </div>
                                                     <div class="add_cart">
                                                         <button class="button btn-cart" type="button" onclick="Cart.addProduct(@item.Id,@item.Price,'@item.Images','@item.PrName');"><span>Mua ngay</span></button>
@@ -234,11 +265,11 @@
                                             </div>
                                         </div>
                                     </div>
-                                </div>
+                                </li>
                             }
                         }
                     }
-                </div>
+                </ul>
             </div>
         </div>
     </section>
